# cellular-automata

./: CMakeLists.txt  README.md
.cache/clangd/index/: automata.cpp.A5A439A3FBED068B.idx  automata.h.1DBCBA1E5C5167C8.idx  main.cpp.9E0A08331805F0E6.idx
src/: automata.cpp  automata.h  main.cpp
src/shaders/: automata.fs  automata.vs  fragment.fs  vertex.vs
